--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 
   <body>
     <h1>Shopping list</h1>
+    <ul></ul>
+    <script>
+      const electron = require("electron");
+      const { ipcRenderer } = electron;
+      const ulShopping = document.querySelector("ul");
+
+      ipcRenderer.on("item:add", (e, item) => {
+        const liShopping = document.createElement("li");
+        const itemText = document.createTextNode(item);
+        liShopping.appendChild(itemText);
+        ulShopping.appendChild(liShopping);
+      });
+    </script>
     <script src="./renderer.js"></script>
   </body>
 </html>
