--- a/addWindow.html
+++ b/addWindow.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <title>Add Shopping Item</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/sketchy/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-N8DsABZCqc1XWbg/bAlIDk7AS/yNzT5fcKzg/TwfmTuUqZhGquVmpb5VvfmLcMzp"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <form>
-      <div>
-        <label>Enter Item</label>
-        <input type="text" id="shoppingItem" autofocus
+      <div class="mt-2">
+        <label class="mt-0">Enter Item</label>
+        <input class="mt-2" type="text" id="shoppingItem" autofocus
       </div>
-      <button type="submit">Add item</button>
+      <button class="mt-2" type="submit">Add item</button>
     </form>
     <script>
       const electron = require("electron");
