--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
   <head>
     <title>Shopping list</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/sketchy/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-N8DsABZCqc1XWbg/bAlIDk7AS/yNzT5fcKzg/TwfmTuUqZhGquVmpb5VvfmLcMzp"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
-    <h1>Shopping list</h1>
+    <nav class="nav-wrapper">
+      <h2 class="text-center">Shopping List</h2>
+    </nav>
     <ul></ul>
     <script>
       const electron = require("electron");
@@ -25,6 +33,11 @@
       ipcRenderer.on("item:clear", () => {
         ulShopping.innerHTML = "";
       });
+      const deleteItem = e => {
+        e.target.remove();
+      };
+
+      ulShopping.addEventListener("dblclick", deleteItem);
     </script>
     <script src="./renderer.js"></script>
   </body>
