--- a/addWindow.html
+++ b/addWindow.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <form>
-      <div class="mt-2">
-        <label class="mt-0">Enter Item</label>
-        <input class="mt-2" type="text" id="shoppingItem" autofocus
+      <div class="mt-2 ml-2">
+        <label class="mt-0 ml-2">Enter Item</label>
+        <input class="mt-2 ml-2" type="text" id="shoppingItem" autofocus
       </div>
-      <button class="mt-2" type="submit">Add item</button>
+      <button class="mt-2 ml-2" type="submit">Add item</button>
     </form>
     <script>
       const electron = require("electron");
